# blocklib

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  README.rst  __init__.py  azure-pipelines.yml  codecov.yml  pyproject.toml  requirement.txt  requirements.txt  setup.py
.github/workflows/: build_publish.yml  python-test.yml  typechecking.yml
blocklib/: __init__.py  assess.py  blocks_generator.py  candidate_blocks_generator.py  configuration.py  encoding.py  evaluation.py  pprlindex.py  pprlkasn.py  pprllambdafold.py  pprlpsig.py  signature_generator.py  simmeasure.py  stats.py  utils.py  validation.py
blocklib/schemas/: signature-config-schema.json
blocklib/validation/: __init__.py  constrained_types.py  lambda_fold_validation.py  psig_validation.py  shared_blocking_config.py
docs/: blocking-schema.rst  conf.py  development.rst  devops.rst  doc-requirements.txt  index.rst  python-api.rst  references.rst
docs/tutorial/: index.rst  tutorial_blocking.ipynb
docs/tutorial/data/: alice.csv  bob.csv
pblock/: __init__.py  pprlindex.py
tests/: conftest.py  test_blocks_generators.py  test_candidate_block_generator.py  test_evaluation.py  test_get_config.py  test_pprlindex.py  test_pprlkasn.py  test_pprllambdafold.py  test_pprlpsig.py  test_signature_generator.py  test_simmeasure.py  test_util.py  test_validation.py
tests/data/: small.csv  small_clk.json  small_schema.json
