[tool.poetry]
name = "blocklib"
version = "0.1.8"
description = "A library for blocking in record linkage"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Wilko Henecka <wilkohenecka@gmx.net>",
    "Joyce Wang <joyce.wang@csiro.au>",
    "Brian Thorne <brian@hardbyte.nz>"
]
homepage = "https://github.com/data61/blocklib"
documentation = "https://blocklib.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent"
]

include = [
    "CHANGELOG.md",
    "schemas/*.json*"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/data61/blocklib/issues"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
jsonschema = ">=3.1,<5.0"
numpy = "^1.20.1"
metaphone = "^0.6"
tqdm = "^4.36.1"
pydantic = "^1.8"
typing_extensions = ">=3.7.4,<5.0.0"

# Optional dependencies, see extras section to toggle
nbval = {version = "^0.9.6", optional = true}
Sphinx = {version = "^4.1.0", optional = true}
nbsphinx = {version = "^0.8.2", optional = true}
pandas = {version = "^1.3.5", optional = true}
notebook = {version = "^6.2.0", optional = true}
bitarray = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"
mypy = "^0.942"

[tool.poetry.extras]
docs = [
    "sphinx",
    "nbsphinx",
    "pandas",
    "notebook",
    "nbval"
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
