[tool.poetry]
name = "blocklib"
version = "0.1.11"
description = "A library for blocking in record linkage"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Wilko Henecka <wilkohenecka@gmx.net>",
    "Joyce Wang <joyce.wang@csiro.au>",
    "Brian Thorne <brian@hardbyte.nz>"
]
homepage = "https://github.com/data61/blocklib"
documentation = "https://blocklib.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent"
]

include = [
    "CHANGELOG.md",
    "schemas/*.json*"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/data61/blocklib/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
jsonschema = ">=3.1,<5.0"
numpy = "^1.20.1"
metaphone = "^0.6"
tqdm = "^4.36.1"
pydantic = "^1.10"
typing_extensions = ">=3.7.4,<5.0.0"


# Optional dependencies required to build docs and test
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
nbval = ">=0.9.6"
Sphinx = "^4.1.0"
nbsphinx = ">=0.8.2,<0.10.0"
pandas = ">=1.3.5,<3.0.0"
notebook = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0"
mypy = "^1.0.0"
bitarray = "^2.4.0"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
